# crit_robotics

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
crit_robotics/: CMakeLists.txt  package.xml
crit_robotics/launch/: calib.launch.py
docs/: architecture.md  getting-started.md
scripts/: setup.sh
scripts/env/: apt.sh  bashrc.sh  install_mvs.sh  install_ros.sh  pyenv.sh  rosdep.sh
scripts/misc/: build_ballestic_table.py
