[project]
name = "robodevel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catkin-pkg>=1.1.0",
    "empy>=4.2",
    "lap>=0.5.12",
    "lark>=1.3.1",
    "numba>=0.63.1",
    "opencv-python>=4.12.0.88",
    "openvino==2025.4.0",
    "safetensors>=0.7.0",
    "scipy>=1.17.0",
    "setuptools>=80.9.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
